--- a/Zabawazelementami.html
+++ b/Zabawazelementami.html
@@ -49,9 +49,15 @@
       <h3>
         A) Czy wiecie co to za typ inputa i jak mu ustawić wartość domyślną?
       </h3>
-      <form>
-        <input type="radio" id="Tak" value="Tak" />
-      </form>
+      <div id="rates">
+        <input type="radio" id="r1" name="rate" value="Fixed Rate" /> Tak
+        <input type="radio" id="r2" name="rate" value="Variable Rate" />Nie
+        <h3>
+          B) Czy wiecie co to za typ inputa i jak mu ustawić wartość domyślną?
+        </h3>
+        <input type="checkbox" id="r1" name="rate" value="Fixed Rate" /> Tak
+        <input type="checkbox" id="r2" name="rate" value="Fixed Rate" /> Nie
+      </div>
     </div>
   </html>
 </body>
