--- a/O mnie.html
+++ b/O mnie.html
@@ -6,22 +6,21 @@
 
 <body>
 
-  <div>
-    <p><strong>Imię i nazwisko:</strong>Fabian Kulesza</p>
-    <p><strong>Wiek:</strong>25 lat</p>
+    <div><strong>Imię i nazwisko:</strong><em>Fabian Kulesza</em></div>
+    <div><strong>Wiek:</strong><em>25 lat</em></div>
      <span>
     <p>
         <strong>Zainteresowania:</strong>
           <ul>
-              <li>Sport</li>
-              <li>Muzyka</li>
-              <li>Programowanie</li>
+              <li><em>Sport</em></li>
+              <li><em>Muzyka</em></li>
+              <li><em>Programowanie</em></li>
           </ul>
           <em>Więcej o mnie na FB:</em>
     </p></span>
     </div>
-    <div>
       <button><a href="https://www.facebook.com/ikkesetilbake"target="_blank"><h3>Profil na FB</h3></a></button>oraz<button><a href="https://www.instagram.com/vbi_.13/"target="_blank"><h3>Profil na IG</h3></a></button>
-  </div>
-  <img src="C:\Users\48731\PROJECTS\AcDmy\noco.jpg" alt="notrudno">
+      <br>
+      <br>
+  <img alt="notrudno">
 </body>
