--- a/Shrek.html
+++ b/Shrek.html
@@ -8,9 +8,11 @@
   <img
     src="https://a.allegroimg.com/s1024/0c1a1a/fe5dd90547b98e139cfd2b7fb175"
   />
-  <ul>
-    <li>I skonczyło się rumakowanie</li>
-    <li>Zostaję do środy! Taka imprezka!</li>
-    <li>Może omówimy to przy bezalkoholowym?</li>
-  </ul>
+  <div>
+    <ul>
+      <li><em>I skonczyło się rumakowanie</em></li>
+      <li><em>Zostaję do środy! Taka imprezka!</em></li>
+      <li><em>Może omówimy to przy bezalkoholowym?</em></li>
+    </ul>
+  </div>
 </body>
