--- a/PodstawoweTagi.html
+++ b/PodstawoweTagi.html
@@ -1,2 +1,7 @@
 <!DOCTYPE html>
-<meta charset="utf-8" />
+<meta charset="utf-8"/>
+<head><h1>Tytuł strony</h1></head>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sunt, esse tempore modi unde fugit impedit ullam laudantium amet desrunt quod repudiandae itaque ut tenetur facilis corporis iste nemo nihil.</p>
+<div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo distinctio deleniti commodi cum quia eos aspernatur, fugiat iure labore nijil, voluptatum provident ipsa similique error voluptaibus ut, ipsum ipsam. Cum assumenda molestiae voluptates alias eaque numquam eveniet iste
+</div>
