--- a/O mnie.html
+++ b/O mnie.html
@@ -4,7 +4,7 @@
   <h1>Witam w moim o mnie dokumencie!</h1>
 </head>
 
-<body>
+<body style="background-color: rgb(8, 103, 161);">
 
     <div><strong>Imię i nazwisko:</strong><em>Fabian Kulesza</em></div>
     <div><strong>Wiek:</strong><em>25 lat</em></div>
@@ -19,7 +19,7 @@
           <em>Więcej o mnie na FB:</em>
     </p></span>
     </div>
-      <button><a href="https://www.facebook.com/ikkesetilbake"target="_blank"><h3>Profil na FB</h3></a></button>oraz<button><a href="https://www.instagram.com/vbi_.13/"target="_blank"><h3>Profil na IG</h3></a></button>
+      <button><a href="https://www.facebook.com/ikkesetilbake"target="_blank"><h3>Profil na FB</h3></a></button>oraz<button style="cursor: pointer;"><a href="https://www.instagram.com/vbi_.13/"target="_blank"><h3>Profil na IG</h3></a></button>
       <br>
       <br>
   <img alt="notrudno">
