--- a/PodstawoweTagi.html
+++ b/PodstawoweTagi.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
-<meta charset="utf-8"/>
-<head><h1>Tytuł strony</h1></head>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sunt, esse tempore modi unde fugit impedit ullam laudantium amet desrunt quod repudiandae itaque ut tenetur facilis corporis iste nemo nihil.</p>
+<meta charset="utf-8" />
+<head>
+  <h1>Tytuł strony</h1>
+</head>
+<p>
+  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate sunt,
+  esse tempore modi unde fugit impedit ullam laudantium amet desrunt quod
+  repudiandae itaque ut tenetur facilis corporis iste nemo nihil.
+</p>
 <div>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo distinctio deleniti commodi cum quia eos aspernatur, fugiat iure labore nijil, voluptatum provident ipsa similique error voluptaibus ut, ipsum ipsam. Cum assumenda molestiae voluptates alias eaque numquam eveniet iste
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo distinctio
+  deleniti commodi cum quia eos aspernatur, fugiat iure labore nijil, voluptatum
+  provident ipsa similique error voluptaibus ut, ipsum ipsam. Cum assumenda
+  molestiae voluptates alias eaque numquam eveniet iste impedit ? Saepe repellat
+  pariatur veniam libero asperiores quam facilis tempore repudiandae. Optio
+  molestias quidem ipsum molestiae odit reprehenderit. Blanditiis maiores quod
+  eos.
 </div>
+<br />
+<a href="www.google.com" target="_blank">Przejdź do Google w nowej karcie</a>
+<br />
+<br />
+<a href="www.google.com">Przejdźdo Google w tej samek karcie</a>
+<br />
+<br />
+<img alt="zdjęcie kota" />
