--- a/CSSPodstawy/index2.html
+++ b/CSSPodstawy/index2.html
@@ -2,12 +2,10 @@
 <meta charset="utf=8">
 <title>Bez tytułu nie da rady</title>
 <head>
-<link rel="stylesheet" href="css2.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
     <h1>Lista zakupów</h1>
-    </div>
     <ul>
         <li>Chleb</li>
         <li>Whisky</li>
