--- a/CSSPodstawy/Jak dodać style do HTML/index.html
+++ b/CSSPodstawy/Jak dodać style do HTML/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <title>Hello world!</title>
 <head>
-    <link rel="stylesheet" href="indexcss.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <style>
     body{
