--- a/projekt/index.html
+++ b/projekt/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <div class="wrapper">
-      <img class="logo" src="/projekt/images/logo.png" alt="logo" />
+      <img class="logo" src="/AcDm/projekt/images/logo.png" alt="logo" />
       <div class="login-section">
         <div class="login-form">
           <h1>Zarejestruj się jako trener</h1>
-          <button class="registration">Rejestracja przez Facebook</button>
-          <button class="registration">Rejestracja przez Instagram</button>
+              <a href=""><button class="registration"><img class="logo-holder pull-left" src="/AcDm/projekt/images/facebook.png" />Rejestracja przez Facebook</button></a>
+          <a href=""><button class="registration"><img class="logo-holder pull-left" src="/AcDm/projekt/images/instagram.png" />Rejestracja przez Instagram</button></a>
           <div class="text-divider">
             <div class="divider"></div>
             <p><span>Lub za pomocą maila</span></p>
@@ -35,7 +35,7 @@
           <label for="first-name"
             >I have read the <a href="">Terms & Conditions</a></label
           >
-          <button id="freereg">Zarejestruj się za darmo</button>
+          <a href=""><button id="freereg">Zarejestruj się za darmo</button></a>
           <div class="divider"></div>
           <p>
             <span>Masz już konto?<a href="">Zaloguj się</a></span>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="image">
-          <img src="/projekt/images/photowoman.png" alt="login" />
+          <img src="/AcDm/projekt/images/photowoman.png" alt="login" />
         </div>
       </div>
     </div>
